--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,15 @@
             <version>0.2.0</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.37.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
